# lifeash

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: general.yml
cremator/: Cargo.toml
cremator/src/: cremator.rs  logging.rs  main.rs  simulator.rs
cremator/src/graphics/: camera.rs  cell_renderer.rs  mod.rs  renderer.rs
lifeash/: Cargo.toml
lifeash/src/: node.rs  universe.rs
refs/: ggez.rs
src/: bin.rs  core.rs  lib.rs  life.rs  logging.rs  main.rs  node.rs  simulator.rs  test.rs  universe.rs
src/graphics/: camera.rs  mod.rs  renderer.rs
src/treelife/: mod.rs  tree_node.rs  tree_universe.rs
