[package]
name = "hasherlife"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
eyre = "0.4.3"
color-eyre = { version = "0.3.4", features = [ "capture-spantrace"] }
tracing = "0.1.15"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.5", features = [ "env-filter" ] }
