[package]
name = "hasherlife"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "A Hashlife (Gosper's algorithm) implementation written in Rust"
readme = "README.md"

homepage = "https://github.com/LU15W1R7H/hasherlife"
repository = "https://github.com/LU15W1R7H/hasherlife.git"

#documentation = "docs.rs link"
keywords = ["hashlife", "cellular-automata", "hashing", "memoization" ]
categories = [ "simulation" ]
license = "MIT"

#[badges]


[profile.release]
debug = true

[dependencies]
eyre = "0.4.3"
color-eyre = { version = "0.3.4", features = [ "capture-spantrace"] }
tracing = "0.1.15"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.5", features = [ "env-filter" ] }
