
[package]
name = "cremator"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "A Hashlife (Gosper's algorithm) simulation written in Rust"
readme = "README.md"

homepage = "https://github.com/LU15W1R7H/lifeash"
repository = "https://github.com/LU15W1R7H/lifeash.git"
documentation = "https://docs.rs/cremator"

keywords = ["hashlife", "cellular-automata", "hashing", "memoization" ]
categories = [ "simulation" ]
license = "MIT"

[dependencies]
lifeash = { path = "../lifeash" }

glium = { version = "0.27.0", default-features = true }
imgui = "0.4.0"
imgui-glium-renderer = "0.4.0"
imgui-winit-support = "0.4.0"
#clipboard = "0.5.0"

eyre = "0.6.0"
color-eyre = { version = "0.5.0", features = [ "capture-spantrace"] }
tracing = "0.1.17"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.9", features = [ "env-filter" ] }

#nalgebra = "0.21.1"

