
[package]
name = "cremator"
version = "0.1.0"
authors = ["Luis Wirth <lwirth2000@gmail.com>"]
edition = "2018"

description = "A Hashlife (Gosper's algorithm) simulation written in Rust"
readme = "README.md"

homepage = "https://github.com/LU15W1R7H/lifeash"
repository = "https://github.com/LU15W1R7H/lifeash.git"
documentation = "https://docs.rs/cremator"

keywords = ["hashlife", "cellular-automata", "hashing", "memoization" ]
categories = [ "simulation" ]
license = "MIT"

[dependencies]
lifeash = { path = "../lifeash" }

glium = { version = "0.28.0", default-features = true }

eyre = "0.6.1"
color-eyre = { version = "0.5.6", features = [ "capture-spantrace"] }
tracing = "0.1.21"
tracing-error = "0.1.2"
tracing-subscriber = { version = "0.2.14", features = [ "env-filter" ] }

#nalgebra = "0.21.1"

